# maestro

./: .gitignore  CMakeLists.txt  maestro-top.cpp  run_example.sh
cost-model/include/: option.hpp
cost-model/include/cost-analysis/: CA_cost-analysis-engine.hpp
cost-model/include/dataflow-specification-language/: DFSL_syntax_tokens.hpp
cost-model/include/design-space-exploration/: DSE_csv_writer.hpp
cost-model/include/user-api/: API_user-interface-v2.hpp
data/hw/: accelerator_1.m
data/mapping/: example.m
